[package]
name = "doh-proxy-rs"
version = "0.1.0"
authors = ["Balthild <ibalthild@gmail.com>"]
edition = "2018"
description = "DNS over HTTP proxy"
license = "GPL-3.0-or-later"
documentation = "https://github.com/balthild/doh-proxy-rs/blob/master/README.md"
homepage = "https://github.com/balthild/doh-proxy-rs"
repository = "https://github.com/balthild/doh-proxy-rs"
readme = "README.md"

[dependencies]
argparse = "0.2"
lazy_static = "1.2"
tokio = { version = "0.1", features = ["async-await-preview"] }
tokio-tls = "0.2"
tokio-async-await = "0.1"
futures-preview = { version = "0.3.0-alpha.12", features = ["tokio-compat"] }
futures_01 = { version = "0.1", package = "futures" }
hyper = "0.12"
native-tls = "0.2"
base64 = "0.10"
dns-parser = "0.8"
